--- a/Blogpost.html
+++ b/Blogpost.html
@@ -7,20 +7,24 @@
     <div id="container">
       <div id="cabecera">
         Hyperblog
-        <span id="tagline">Tu blog de modificadacabecera</span>
+        <span id="tagline">Bloc Henry Rodriguez</span>
       </div>
       <div id="post">
-        <h1>Este es el título atractivo e interesante del post</h1>
+        <h1>
+          En este bloc voy a postear todo mi aprendizaje en desarrollo e
+          ingenieria
+        </h1>
         <p>
-          Y este es el parrafo de inicio donde vamos a explicar las cosas
-          increéibles que se pueden hacer con ramas
+          Inicamos con los entrenamiento de fundamento de ingeniria, git y
+          github.
         </p>
         <p>
-          Los blogs son la mejor forma de compartir información y tus ideas.
-          Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un
-          norockstar. Pero estadísticamente no lo eres.... por ahora.
+          Muy interesante conocer las raices de soportan la ingenieria de
+          software. El sistema de control de veriones Git permite gestinoar la
+          trazabilidad en un proyecto, en especial cuando trabajamos en equipo
+          con otros profesionales.
         </p>
-        <p>Suscribete y dale like Henry</p>
+        <p>Suscribete y dale like a mi contenido Henry.com.do</p>
       </div>
     </div>
   </body>
