--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>El titulo del post</title>
-    <link rel="stylesheet" href="css/Estilo.css" />
+    <link rel="stylesheet" href="CSS/Estilo.css" />
   </head>
   <body>
     <div id="container">
