modificando el contenido a solicitud del cliente

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -24,7 +24,7 @@
           trazabilidad en un proyecto, en especial cuando trabajamos en equipo
           con otros profesionales.
         </p>
-        <p>Suscribete y dale like a mi contenido Henry.com.do</p>
+        <p>Suscribete y dale like a mi contenido Tenacityg.com.do</p>
       </div>
     </div>
   </body>
