actualizando Estilos, Blogspost y Readme.md

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -14,8 +14,13 @@
           En este bloc voy a postear todo mi aprendizaje en desarrollo e
           ingenieria
         </h1>
+        <ol>
+          <li></li>
+          <li>1. Tecnología para gerente y directorios</li>
+          <li>2. Git y Github</li>
+        </ol>
         <p>
-          Inicamos con los entrenamiento de fundamento de ingeniria, git y
+          < Inicamos con los entrenamiento de fundamento de ingeniria, git y
           github.
         </p>
         <p>
