correciones de bugs

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -15,12 +15,11 @@
           ingenieria
         </h1>
         <ol>
-          <li></li>
           <li>1. Tecnología para gerente y directorios</li>
           <li>2. Git y Github</li>
         </ol>
         <p>
-          < Inicamos con los entrenamiento de fundamento de ingeniria, git y
+          Inicamos con los entrenamiento de fundamento de ingeniria, git y
           github.
         </p>
         <p>
